--- a/README.rdoc
+++ b/README.rdoc
@@ -32,9 +32,23 @@ To use the 6fusion Adaptor Template, simply...
 * $ git checkout \{forked_repository\}
 * Modify to suit
 
+== JRuby Configuration w/ RVM
+
+If you are looking to use a Java library for interaction with your cloud service, you'll want to run this REST service as a jruby application.  To do so is pretty simple.
+
+* In the Gemfile you'll want to switch from the 'thin' gem to the 'trinidad' gem.
+  * Comment Out Line #4 (gem 'thin' # or mongrel)
+  * Uncomment Line #5 (gem 'trinidad', :platform => 'jruby')
+* If you are using rvm you'll want to also uncomment a line in the .rvmrc file in the root of the project.
+  * Line #22 (PROJECT_JRUBY_OPTS=( --1.9 ).
+* Finally if you haven't done so run this command in your shell client.
+  * chmod +x ${rvm_path}/hooks/after_use_jruby_opts
+
 == Getting Started
 
 In order to use the template it is really simple.  All you need to do is navigate to the models folder of your checkout and modify the class methods on the models to implement the requested information.  You can use the yard documentation to get an idea of what to implement or read the comments above each of the methods.
+
+You can access the yard documentation either through the yard gem or using the 6fusion hosted documentation at {devdocs.6fusion.com}[http://devdocs.6fusion.com]
 
 ** Do NOT modify the INode model unless you have a specific storage strategy.  This is the only model where a basic implementation has already been done for you.
 
